--- a/admin_dashboard/templates/admin_dashboard/partials/admin-customers.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/admin-customers.html
@@ -1,3 +1,4 @@
+{% load static %}
 <link rel="stylesheet" href="{% static 'css/admin-customers.css' %}">
   <header class="admin-topbar">
     <div class="topbar__left">
@@ -185,4 +186,4 @@
       </table>
     </div>
   </main>
-  {% include 'admin_dashboard/partials/nav.html'%}
+  {% include 'admin_dashboard/partials/nav.html' %}
