added for admin-dahsboard

--- a/admin_dashboard/templates/admin_dashboard/admin-dashboard.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-dashboard.html
@@ -3,5 +3,5 @@
 {% block extra_styles %} <link rel="stylesheet" href="{% static 'css/admin-dashboard.css' %}"> {% endblock extra_styles %}
 
     {% block content %}
-
+      {% include "admin_dashboard/partials/admin-dashboard.html" %}
     {% endblock content %}
