--- a/admin_dashboard/templates/admin_dashboard/partials/admin-orders.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/admin-orders.html
@@ -163,4 +163,6 @@
   </div>
 </main>
 
-{% include 'admin_dashboard/partials/nav.html'%}
+{% if request.htmx %}
+  {% include 'admin_dashboard/partials/nav.html'%}
+{% endif %}
