--- a/admin_dashboard/templates/admin_dashboard/admin-products.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-products.html
@@ -3,5 +3,5 @@
 {% block extra_styles %}<link rel="stylesheet" href="{% static 'css/admin-products.css' %}">{% endblock extra_styles %}
 
 {% block content %}
-
+  {% include "admin_dashboard/partials/admin-products.html" %}
 {% endblock content %}
