fixed htmx request issue on products add page

--- a/admin_dashboard/templates/admin_dashboard/admin-base.html
+++ b/admin_dashboard/templates/admin_dashboard/admin-base.html
@@ -62,7 +62,7 @@
       </div>
     </aside>
 
-    <div hx-target="this"  class="admin-layout__main">
+    <div class="admin-layout__main">
 
       {% block content %}
 
