added validation for float prices

--- a/admin_dashboard/templates/admin_dashboard/partials/product-lists.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/product-lists.html
@@ -6,7 +6,7 @@
     <th>color</th>
     <th>quantity</th>
     <th>unit price</th>
-    <th>total price</th>
+    <th>unit total price</th>
     <!-- <th>Actions</th> -->
     </tr>
 </thead>
@@ -35,7 +35,7 @@
     <td></td>
     <td> </td>
     <td> Total price:</td>
-    <td> $10,000.00</td>
+    <td> ${{total_price}}</td>
     <!-- <td class="table__actions">
     </td> -->
     </tr>
