added tags for deleting from  product list

--- a/admin_dashboard/templates/admin_dashboard/partials/product-lists.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/product-lists.html
@@ -26,6 +26,7 @@
     <td>{{product.total_price}}</td>
     <td style="display:flex; gap: var(--space-sm); align-items:center;">
         <button 
+        hx-delete="{% url 'delete-post-single' product.product_id %}"
         class="btn"  style="background-color:brown;" type="button">Clear</button>   
         <button class="btn"  style="background-color:#0d3b66" type="button">Edit</button>   
     </td>
