--- a/admin_dashboard/templates/admin_dashboard/partials/product-lists.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/product-lists.html
@@ -29,7 +29,11 @@
         hx-delete="{% url 'delete-post-single' product.product_id %}"
         hx-target=".table"
         class="btn"  style="background-color:brown;" type="button">Delete</button>   
-        <button class="btn"  style="background-color:#0d3b66" type="button">Edit</button>   
+        <button
+        hx-post="{% url 'edit-post-single' product.product_id %}"
+        hx-target="#form"
+        hx-swap="innerHTML"
+        class="btn"  style="background-color:#0d3b66" type="button">Edit</button>   
     </td>
     
     <!-- <td style="display:flex; gap: var(--space-sm); ">
