--- a/admin_dashboard/templates/admin_dashboard/partials/add-product-form.html
+++ b/admin_dashboard/templates/admin_dashboard/partials/add-product-form.html
@@ -222,11 +222,23 @@
 </form>
 
 {% if not is_create_view %}
+<table
+id="edit-delete-{{product_id}}"
+hx-swap-oob="true"
+>
     <td 
     style="display:flex; gap: var(--space-sm); align-items:center;" 
-    id="edit-delete-{{product_id}}"
-    hx-swap-oob="true"
+    
     >
+    
+        <button 
+        hx-delete="{% url 'delete-post-single' product_id %}"
+        hx-target=".table"
+        hx-swap="outerHTML"
+        disabled
+        class="btn"  style="background-color:brown;opacity:0.5" type="button">Delete</button>   
+
+
         <button
         hx-get="{% url 'edit-post-single' product_id %}"
         hx-target="#form"
@@ -234,4 +246,5 @@
         hx-push-url="true"
         class="btn"  style="background-color:#0d3b66" type="button">Edit</button>   
     </td>
+</table>
 {% endif %}
